[metadata]
name = gerritstreamer
summary = Eventstream Executor
description-file =
    README.rst
author = Endre Karlson
author-email = endre.karlson@gmail.com
home-page = github.com/ekarlso/gerritstreamer
classifier =
    Environment :: Any
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    gerritstreamer
scripts =


[entry_points]
console_scripts =
    gerritstreamer = gerritstreamer.service:run

gerritstreamer.subscribers =
    jenkins-gerrit-trigger = gerritstreamer.subscribers.jenkins_trigger:JenkinsGerritTrigger


[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_docs]
upload-dir = doc/build/html

[nosetests]
cover-package = esexec
cover-html = true
cover-erase = true
cover-inclusive = true
verbosity=2
detailed-errors=1
where=esexec.tests
